--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Manjyeel Khatiwada</a></h1>
+        <h1 class="text-light"><a href="index.html">Sakar Khatiwada</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/ManZyeel.M.Khatiwaada" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/sacar.babu" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/sakar_khatiwada_" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
@@ -66,8 +66,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Manjyeel Khatiwada</h1>
-      <p>I'm A <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <h1>Sakar Khatiwada</h1>
+      <p>I'm A <span class="typed" data-typed-items="Entrepreneur,Visionary,Optimistic,Developer,Designer,Programmer"></span></p>
     </div>
   </section><!-- End Hero -->
 
